bug fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,14 @@ header.navbar-container .nav-list ul {
   flex-direction: column;
   align-items: center;
   background-color: white;
-  transform: translateX(100%);
+  visibility: hidden;
   transition: all 1s;
   opacity: 0;
 }
 
 header.navbar-container .nav-list ul.slide {
   opacity: 1;
-  transform: translateX(0);
+  visibility: visible;
 }
 
 header.navbar-container .nav-list li a {
@@ -410,7 +410,7 @@ footer {
     flex-direction: row;
     position: static;
     opacity: 1;
-    transform: translateX(0);
+    visibility: visible;
     transition: none;
   }
 
